# doc-processing

./: .gitignore  README.md  steps.txt
backend/: examples.py  main.py  pyproject.toml  server.py
backend/utils/: data_to_json.py  database.py  llm.py  ocr.py  pdf_to_jpg.py  system_message.py
frontend/: package-lock.json
frontend/src/routes/: +layout.svelte  +page.svelte
